--- a/landing-page/assets/css/style.css
+++ b/landing-page/assets/css/style.css
@@ -298,8 +298,7 @@ label {
 .btn-secondary {
   color: #fff;
   background-color: #f15b43;
-  border-color: #feded9;
-  border-width: 2px;
+  border-color: #feded9;  
 }
 
 .btn-primary, 
@@ -309,6 +308,7 @@ label {
   width: 150px;
   height: 40px;
   line-height: 1em;
+  border-width: 2px;
 }
 
 .btn-primary:hover,
@@ -325,7 +325,12 @@ label {
   border-color: #7b1200;
 }
 
-/* Botão primary Step 3 */
+.btn-secondary.focus, .btn-secondary:focus,
+.btn-primary.focus, .btn-primary:focus {
+  box-shadow: none;
+}
+
+/* Step 3 */
 #step3 .btn-primary {
   padding: 22px 50px;
   text-align: center;
@@ -368,9 +373,8 @@ label {
   background-color: #ed482d;
   border-color: transparent;
   border-bottom: 2px solid #f6a496;
-}
+} 
 
-/* Step3 */
 #step3 .col-sm {
   max-width: 70%;
 }
@@ -386,6 +390,113 @@ label {
 #step3 #content-resultado {
   padding-top: 80px;
   padding-bottom: 150px;  
+}
+
+/* Modal */
+#modalCancelar { top: 30%; }
+
+#modalCancelar .btn-primary,
+#modalCancelar .btn-info {
+  color: #f85a3f;
+  background-color: #ffffff;
+  border-color: #f85a3f;
+}
+
+#modalCancelar .btn-secondary {
+  color: #fff;
+  background-color: #f85a3f;
+  border-color: #f85a3f;
+}
+
+#modalCancelar .btn-primary, 
+#modalCancelar .btn-secondary,
+#modalCancelar .btn-info {
+  font-size: 1.2em;
+  font-weight: normal;  
+  height: 40px;
+  line-height: 1em;
+  border-width: 2px;  
+}
+
+#modalCancelar .btn-primary:hover,
+#modalCancelar .btn-secondary:hover {
+  color: #ffffff;
+  background-color: #932413;
+  border-color: #932413;
+}
+
+/* Tamanhos dos botões */
+#modalCancelar .btn-primary {
+  width: 49%;
+}
+
+#modalCancelar .btn-secondary {
+  width: 49%;
+  font-size: 1em;
+}
+
+#modalCancelar .btn-info {
+  width: 100%;
+  border: 2px solid #f85a3f;
+}
+
+.modal-header {
+  border: none;
+  padding-bottom: 0;
+}
+
+.modal-title {
+  text-align: center;
+  width: 100%;
+  font-size: 20px;
+}
+
+.modal-body {
+  padding-top: 10px;
+}
+
+.modal-footer {
+  border: none;
+}
+
+#modalCancelar label {
+  font-weight: normal;
+  font-size: 12px;
+  margin-top: 10px;
+  margin-bottom: 0;
+}
+
+#modalCancelar input[type=text] {
+  background-color: #ffffff;
+  border: 2px solid #f85a3f;
+  height: 40px;
+}
+
+#modalCancelar .btn-default {
+  background-color: #f85a3f;
+  height: 40px;
+}
+
+#modalCancelar .fas {
+  margin: 0;
+  padding: 0;
+}
+
+#modalCancelar .form-check {
+  padding-top: 10px;
+  margin-bottom: -10px;
+}
+
+#modalCancelar input[type=checkbox] {
+  margin-top: 12px;
+}
+
+#modalCancelar .form-check-label {
+  color: #f85a3f;
+  font-weight: bold;
+  font-size: 0.9em;
+  text-decoration: none;
+  padding-left: 5px;
 }
 
 /*--------------------------------------------------------------
@@ -540,5 +651,14 @@ label {
 
   #step3 .fa-thumbs-up {    
     margin-top: 56px;
+  }
+
+  /* Modal - Tamanhos dos botões */
+  #modalCancelar .btn-primary {  
+    font-size: 1em;
+  }
+    
+  #modalCancelar .btn-secondary {
+    font-size: 0.8em;
   }
 }
