--- a/landing-page/assets/css/style.css
+++ b/landing-page/assets/css/style.css
@@ -7,6 +7,10 @@ html {
   overflow-x: hidden;
 }
 
+body {
+  font-family: 'Lato', sans-serif;  
+}
+
 .logo {
   margin: 40px 0 40px 0;
 }
@@ -37,6 +41,11 @@ strong {
 
 .fa-10x {
   margin-top: 20px;
+}
+
+.btn {
+  border-radius: 0;
+  border: none;
 }
 
 .form-row > .col, .form-row > [class*="col-"] {
@@ -86,48 +95,50 @@ h1 {
   -ms-flex-align: center;
   align-items: center;
   padding: .375rem .75rem;
-  margin-bottom: 0;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 18px;  
+  margin-bottom: 0;    
   text-align: center;
   white-space: nowrap;  
   border-radius: 0;        
   border-top: none;
   border-left: none;
   border-right: none;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 18px;
 }
 
-input::-webkit-input-placeholder {  
+/* Placeholder Dropdown */
+input::-webkit-input-placeholder {    
   font-size: 16px;
-  font-weight: lighter;
+  font-weight: normal;
   text-align: right;
-  padding-right: 30px;
+  padding-right: 0;
 }
-input:-moz-placeholder { /* Firefox 18- */  
+input:-moz-placeholder { /* Firefox 18- */    
   font-size: 16px;
-  font-weight: lighter;
+  font-weight: normal;
   text-align: right;
-  padding-right: 30px;
+  padding-right: 0;
 }
-input::-moz-placeholder {  /* Firefox 19+ */  
+input::-moz-placeholder {  /* Firefox 19+ */    
   font-size: 16px;
-  font-weight: lighter;
+  font-weight: normal;
   text-align: right;
-  padding-right: 30px;
+  padding-right: 0;
 }
-input:-ms-input-placeholder {    
+input:-ms-input-placeholder {      
   font-size: 16px;
-  font-weight: lighter;
+  font-weight: normal;
   text-align: right;
-  padding-right: 30px;
+  padding-right: 0;
 }
 
 input[type=text],
-input[type=password] {
+input[type=password],
+.dropdown-toggle {
   font-size: 16px;
-  font-weight: lighter;  
-  padding-right: 30px;
+  font-weight: normal;    
+  padding-right: 10px;
   text-align: right;
 }
 
@@ -205,7 +216,9 @@ label {
 }
 
 .dropdown-item {    
-  text-align: right;  
+  text-align: right;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
 }
 
 .dropdown-item:last-child {  
@@ -225,8 +238,7 @@ label {
   border-top: .5em solid;
   border-right: .5em solid transparent;
   border-bottom: 0;
-  border-left: .5em solid transparent;
-  color: #f6a496;
+  border-left: .5em solid transparent;  
 }
 
 .valid-feedback {  
@@ -265,13 +277,20 @@ label {
   position: initial;
 }
 
+.form-control,
+.input-group-text,
+.btn-info,
+.btn-info:hover,
+.btn-info:active,
+input[type=text]:focus,
+input[type=password]:focus {  
+  border-bottom-width: 2px;
+  border-bottom-style: solid;   
+}
+
 /*--------------------------------------------------------------
 	Buttons
 --------------------------------------------------------------*/
-
-.btn {
-  border-radius: 0;  
-}
 
 .btn-primary, 
 .btn-secondary {
@@ -280,7 +299,13 @@ label {
   width: 150px;
   height: 40px;
   line-height: 1em;
-  border-width: 2px;
+}
+
+.btn-primary,
+.btn-secondary,
+.btn-info,
+.btn-default {
+  border-bottom-width: 2px;
 }
 
 .btn-secondary.focus, .btn-secondary:focus,
@@ -348,6 +373,7 @@ label {
 .modal .btn-secondary {
   width: 50%;
   font-size: 1em;
+  float: right;
 }
 
 .modal .btn-info {
@@ -363,6 +389,7 @@ label {
   text-align: center;
   width: 100%;
   font-size: 20px;
+  color: #000000;
 }
 
 .modal-body {
@@ -378,10 +405,13 @@ label {
   font-size: 12px;
   margin-top: 10px;
   margin-bottom: 0;
+  color: #000000;
 }
 
 .modal input[type=text] {  
   height: 40px;
+  width: 80%;
+  text-align: left;
 }
 
 .modal .btn-default {  
@@ -448,6 +478,14 @@ label {
   }
 }
 
+/* Hook for dropdown */
+@media (width: 991px) {      
+  .dropdown-toggle {
+    width: 460px;
+    text-align: right;
+  }
+}
+
 /*--------------------------------------------------------------
 	Responsive Styles - Max 990px
 --------------------------------------------------------------*/  
@@ -460,11 +498,11 @@ label {
 
   /* Dropdown */
   .input-group-text {
-    width: 200px;
+    width: 210px;
   }
 
   .dropdown-toggle {
-    width: 490px;
+    width: 480px;
     text-align: right;
   }  
 
@@ -526,48 +564,27 @@ label {
   }
 
   /* Placeholder Dropdown */
-  input::-webkit-input-placeholder {
-    color: #d23820 !important;
+  input::-webkit-input-placeholder {    
     font-size: 12px;
-    font-weight: bold;
-    text-align: right;
-    padding-right: 0;
   }
-  input:-moz-placeholder { /* Firefox 18- */
-    color: #d23820 !important;
+  input:-moz-placeholder { /* Firefox 18- */    
     font-size: 12px;
-    font-weight: bold;
-    text-align: right;
-    padding-right: 0;
   }
-  input::-moz-placeholder {  /* Firefox 19+ */
-    color: #d23820 !important;
+  input::-moz-placeholder {  /* Firefox 19+ */    
     font-size: 12px;
-    font-weight: bold;
-    text-align: right;
-    padding-right: 0;
   }
-  input:-ms-input-placeholder {  
-    color: #d23820 !important;
+  input:-ms-input-placeholder {      
     font-size: 12px;
-    font-weight: bold;
-    text-align: right;
-    padding-right: 0;
   }
 
   input[type=text],
-  input[type=password] {
-    font-size: 15px;
-    font-weight: lighter;
-    color: #7b1200;
-    padding-right: 10px;
-    text-align: right;
+  input[type=password],
+  .dropdown-toggle {
+    font-size: 12px;
   }
 
   .input-group-text {    
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 18px;
+    font-size: 12px;
   }
 }
 
@@ -599,41 +616,44 @@ label {
   .input-group-text {
     border: none;    
   }
- 
-  input[type=text],
-  input[type=password] {
-    font-size: 15px;
-    font-weight: lighter;
-    color: #7b1200;
-    padding-right: 0;
-    text-align: left;
-  }
-  
-  input[type=text]:focus, 
-  input[type=password]:focus {
-    background-color: #ed482d;    
-    color: #7b1200;
-  }  
 
+  .form-talentos-globais .input-group-text {
+    color: #ffffff;
+    background-color: #0a8191;
+    border-bottom: none;
+}
+
+ /* Step2 */
+ 
+ #step2 h1 {
+   max-width: 60%;
+   margin: auto;
+ } 
+  
   /* Step3 */
   #step3 #header-voluntario-global { display: none; }
-
+  
   #step3 .col-sm {
     max-width: 96%;
     text-align: center;
     margin: auto;
   }
+  
+  #step3 h1 {
+    max-width: 70%;
+    margin: auto;
+  } 
 
   #step3 h2 {
     font-weight: bold;
     font-size: 44px;
     margin-bottom: 20px;
-    padding: 0 34px;
-    line-height: 44px;
+    padding: 0;
+    line-height: 28px;
   }
 
   #step3 h3 {
-    font-size: 30px;
+    font-size: 30px;   
   }
   
   #step3 p {
@@ -689,50 +709,34 @@ label {
     text-align: right;
   }
 
-  input[type=text],
-  input[type=password] {
-    font-size: 15px;
-    font-weight: lighter;
-    color: #7b1200;
-    padding-right: 0;
+  /* Placeholder Dropdown */
+  input::-webkit-input-placeholder {    
+    font-size: 16px;
     text-align: left;
   }
-  
-  input[type=text]:focus, 
-  input[type=password]:focus {
-    background-color: #ed482d;    
-    color: #7b1200;
+  input:-moz-placeholder { /* Firefox 18- */    
+    font-size: 16px;
+    text-align: left;
+  }
+  input::-moz-placeholder {  /* Firefox 19+ */    
+    font-size: 16px;
+    text-align: left;
+  }
+  input:-ms-input-placeholder {      
+    font-size: 16px;
+    text-align: left;
   }
 
-  /* Placeholder Dropdown */
-  input::-webkit-input-placeholder {
-    color: #d23820 !important;
-    font-size: 14px;
-    font-weight: bold;
+  input[type=text],
+  input[type=password],
+  .dropdown-toggle {
+    font-size: 16px;
     text-align: left;
-    padding-right: 0;    
   }
-  input:-moz-placeholder { /* Firefox 18- */
-    color: #d23820 !important;
-    font-size: 14px;
-    font-weight: bold;
-    text-align: left;
-    padding-right: 0;    
-  }
-  input::-moz-placeholder {  /* Firefox 19+ */
-    color: #d23820 !important;
-    font-size: 14px;
-    font-weight: bold;
-    text-align: left;
-    padding-right: 0;    
-  }
-  input:-ms-input-placeholder {  
-    color: #d23820 !important;
-    font-size: 14px;
-    font-weight: bold;
-    text-align: left;
-    padding-right: 0;    
-  }  
+
+  .input-group-text {    
+    font-size: 18px;    
+  } 
 }
 
 /*--------------------------------------------------------------
@@ -740,16 +744,42 @@ label {
 --------------------------------------------------------------*/
 
 @media (max-width: 400px) {
+  h1 {
+    max-width: 90%;
+    margin: auto;
+  }
+
   #form-voluntario-global .col-sm {
     max-width: 370px;
   }
 
   .dropdown-toggle {
     width: 340px;
-    text-align: right;
+    text-align: right;    
   }
-}
+  
+  /* Placeholder Dropdown */
+  input::-webkit-input-placeholder {    
+    font-size: 12px;
+  }
+  input:-moz-placeholder { /* Firefox 18- */    
+    font-size: 12px;
+  }
+  input::-moz-placeholder {  /* Firefox 19+ */    
+    font-size: 12px;
+  }
+  input:-ms-input-placeholder {
+    font-size: 12px;
+  }
 
+  .dropdown-toggle {
+      font-size: 12px;
+  }
+  
+  .input-group-text {    
+    font-size: 14px;
+  } 
+}
 
 /*--------------------------------------------------------------
 	Color Voluntário Global
@@ -761,21 +791,20 @@ label {
 
 /* Forms */
 .form-volutario-global {
-  background: #f85a3f;
-  font-family: 'Lato', sans-serif;
+  background: #f85a3f;  
   color: #ffffff;
 }
 
 .form-volutario-global .form-control {
   color: #cb3227;
   background-color: #ed482d;  
-  border-bottom: 2px solid #f6a496;  
+  border-bottom-color: #f6a496;  
 }
 
 .form-volutario-global .input-group-text {
   color: #f5d3cd;
   background-color: #ed482d;  
-  border-bottom: 2px solid #f6a496;
+  border-bottom-color: #f6a496;
 }
 
 .form-volutario-global .form-control:disabled, 
@@ -794,16 +823,16 @@ label {
 
 /* Placeholders */
 .form-volutario-global input::-webkit-input-placeholder {
-  color: #cb3227 !important;  
+  color: #7b1200 !important;  
 }
 .form-volutario-global input:-moz-placeholder { /* Firefox 18- */
-  color: #cb3227 !important;  
+  color: #7b1200 !important;  
 }
 .form-volutario-global input::-moz-placeholder {  /* Firefox 19+ */
-  color: #cb3227 !important;  
+  color: #7b1200 !important;  
 }
 .form-volutario-global input:-ms-input-placeholder {  
-  color: #cb3227 !important;  
+  color: #7b1200 !important;  
 }
 
 /* Inputs */
@@ -816,7 +845,7 @@ label {
 .form-volutario-global input[type=password]:focus {
   background-color: #ed482d;  
   color: #7b1200;
-  border-bottom: 2px solid #f6a496;
+  border-bottom-color: #f6a496;
 }
 
 .form-volutario-global .alert-warning {
@@ -827,7 +856,7 @@ label {
 
 .form-volutario-global .dropdown-item {  
   color: #ca321a;  
-  border-bottom: 1px solid #fbac9f;
+  border-bottom-color: #fbac9f;
 }
 
 .form-volutario-global .dropdown-item:last-child {
@@ -871,28 +900,28 @@ label {
 }
 
 .form-volutario-global .btn-info {
-  color: #cb3227;
+  color: #7b1200;
   background-color: #ed482d;
   border-color: #ed482d;
-  border-bottom: 2px solid #f6a496;
+  border-bottom-color: #f6a496;
   border-right: transparent;
   border-left: transparent;
 }
 
 .form-volutario-global .btn-info:hover {
-  color: #cb3227;
+  color: #7b1200;
   background-color: #ed482d;
   border-color: #ed482d;
-  border-bottom: 2px solid #f6a496;
+  border-bottom-color: #f6a496;
 }
 
 .form-volutario-global .btn-info:not(:disabled):not(.disabled).active,
 .form-volutario-global .btn-info:not(:disabled):not(.disabled):active,
 .form-volutario-global .show > .btn-info.dropdown-toggle {
-  color: #cb3227;
+  color: #7b1200;
   background-color: #ed482d;
   border-color: transparent;
-  border-bottom: 2px solid #f6a496;
+  border-bottom-color: #f6a496;
 }
 
 /* Modal */
@@ -937,27 +966,26 @@ label {
 	Color Talentos Globais
 --------------------------------------------------------------*/
 
-.form-volutario-global .color-icon {
+.form-talentos-globais .color-icon {
   color: #84c7d0
 }
 
 /* Forms */
 .form-talentos-globais {
-  background: #0a8ea0;
-  font-family: 'Lato', sans-serif;
+  background: #0a8ea0;  
   color: #ffffff;
 }
 
 .form-talentos-globais .form-control {
   color: #054048;
   background-color: #0a8191;  
-  border-bottom: 2px solid #0a8ea0;  
+  border-bottom-color: #0a8ea0;  
 }
 
 .form-talentos-globais .input-group-text {
   color: #ffffff;
   background-color: #0a8191;  
-  border-bottom: 2px solid #0a8ea0;
+  border-bottom-color: #0a8ea0;
 }
 
 .form-talentos-globais .form-control:disabled,
@@ -1056,7 +1084,6 @@ label {
   color: #054048;
   background-color: #0a8191;
   border-color: #0a8ea0;
-  border-bottom: 2px solid #0a8ea0;
   border-right: transparent;
   border-left: transparent;
 }
@@ -1065,7 +1092,6 @@ label {
   color: #054048;
   background-color: #0a8191;
   border-color: #0a8ea0;
-  border-bottom: 2px solid #0a8ea0;
 }
 
 .form-talentos-globais .btn-info:not(:disabled):not(.disabled).active, 
@@ -1075,5 +1101,42 @@ label {
   background-color: #0a8191;
   border-color: transparent;
   border-bottom-color: transparent;
-  border-bottom: 2px solid #0a8ea0;
+}
+
+/* Modal */
+.form-talentos-globais .modal .btn-primary,
+.form-talentos-globais .modal .btn-info {
+  color: #0a8ea0;
+  background-color: #ffffff;
+  border-color: #0a8ea0;
+}
+
+.form-talentos-globais .modal .btn-secondary {
+  color: #fff;
+  background-color: #0a8ea0;
+  border-color: #0a8ea0;
+}
+
+.form-talentos-globais .modal .btn-primary:hover,
+.form-talentos-globais .modal .btn-secondary:hover {
+  color: #ffffff;
+  background-color: #054048;
+  border-color: #054048;
+}
+
+.form-talentos-globais .modal .btn-info {  
+  border: 2px solid #0a8ea0;
+}
+
+.form-talentos-globais .modal input[type=text] {
+  background-color: #ffffff;
+  border: 2px solid #0a8ea0;  
+}
+
+.form-talentos-globais .modal .btn-default {
+  background-color: #0a8ea0;  
+}
+
+.form-talentos-globais .modal .form-check-label {
+  color: #0a8ea0;  
 }
