feat(index / style): first commit with style.css

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,3 +1,11 @@
-<p>
-  landing-page works!
-</p>
+<ul>
+    <li routerLink="/landing-page-gv">
+        landing page gv
+    </li>
+    <li>
+        landing page ge (waiting)
+    </li>
+    <li>
+        landing page gt (waiting)
+    </li>
+</ul>
