--- a/src/app/landing-page-gv/landing-page-gv.component.scss
+++ b/src/app/landing-page-gv/landing-page-gv.component.scss
@@ -1,81 +1,143 @@
-.forms-term {
-    textarea {
-        margin-bottom: 5px;
+@import "../../scss/global.scss";
+
+.header-product {
+    width: 100%;
+		padding: 0 0 55px 0;
+		position: relative;
+		border-bottom: 5px solid #666;
+		.header-product-image {
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			left: 0;
+			top: 0;
+			background-image: url('../../assets/products/gv/intro.jpg');
+			background-position: -25% 50%;
+			filter: brightness(10%);
+			background-repeat: no-repeat;
+			background-size: cover;
+			z-index: -10
+		}
+    .header-menu {
+        display: flex;
+				justify-content: space-between;
+				padding: 0 15px;
+				.logo-aiesec {
+					background-image: url('../../assets/images/aiesec-logo.png');
+					height: 50px;
+					margin: 20px 0;
+					background-size: contain;
+					background-position: center center;
+					background-repeat: no-repeat;
+				}
+				.menu-product{
+					ul {
+            padding: 0;
+            display: flex;
+						list-style: none;
+						justify-content: flex-end;
+            li {
+                padding: 20px;
+                margin: 5px;
+                color: #fff;
+                text-transform: uppercase;
+                font-weight: lighter;
+                &:last-child {
+                    margin-right: 0;
+                }
+            }
+        }
+				}
+        
     }
-    .forms-tem-accepted {
-        font-size: 12px;
-        display: block;
-        margin: 0 auto 15px auto;
-        text-align: center;
+    .product-info {
+        margin: 120px 0;
+        text-align: left;
     }
 }
 
-.loading-animation-gv {
-    background-image: url('../../assets/images/sent-gv.png');
-    background-size: 50%;
-    background-position: center center;
-    background-repeat: no-repeat;
+.product-description {
+	display:flex;
+	align-items: center;
+	.description {
+		h2 {
+			color: #333;
+			margin:10px 0;
+		}
+		p {
+			font-size:17px;
+			font-weight: lighter;
+			color: #555;
+			line-height: 28px;
+		}
+	}
+	
+	.logo-product {
+		background-size: 80%;
+		background-position: center center;
+		background-repeat: no-repeat;
+		&.gv {
+			background-image: url('../../assets/products/gv/gv-logo.png');
+		}
+	}
 }
 
-.checkbox input[type="checkbox"] {
-    opacity: 0;
+.product-steps {
+	min-height: 200px;
+	.container > .row {
+		justify-content: space-between;
+		align-items: center;
+	}
+	.product-image {
+		background-image: url('../../assets/products/gv/product-step.jpg');
+		height: 400px;
+		position: relative;
+		box-shadow: 0 0 3px #f3f3f3;
+		border-radius: 5px;
+		.round {
+			position: absolute;
+			right: -37.5px;
+			top:50%;
+			margin-top: -37.5px;
+			background-color: $primary-gv;
+			background-image: url('../../assets/products/gv/gv-simple-logo.png');
+		}
+	}
+	.product-steps-content {
+		.row {
+			margin: 13px 0;
+			display: flex;
+			align-items: center;
+			&:nth-last-child(2) {
+				margin-bottom: 20px;
+			}
+		}
+	}
 }
 
-.checkbox label::before {
-    content: "";
-    display: inline-block;
-    height: 16px;
-    width: 16px;
-    border: 1px solid;
-}
-
-.checkbox label::after {
-    content: "";
-    display: inline-block;
-    height: 6px;
-    width: 9px;
-    border-left: 2px solid;
-    border-bottom: 2px solid;
-    transform: rotate(-45deg);
-}
-
-.checkbox label {
-    position: relative;
-}
-
-.checkbox label::before,
-.checkbox label::after {
-    position: absolute;
-}
-
-/*Outer-box*/
-
-.checkbox label::before {
-    top: 3px;
-    left: -25px;
-}
-
-/*Checkmark*/
-
-.checkbox label::after {
-    left: -21px;
-    top: 7px;
-}
-
-/*Hide the checkmark by default*/
-
-.checkbox input[type="checkbox"]+label::after {
-    content: none;
-}
-
-/*Unhide the checkmark on the checked state*/
-
-.checkbox input[type="checkbox"]:checked+label::after {
-    content: "";
-}
-
-/*Adding focus styles on the outer-box of the fake checkbox*/
-
-.checkbox input[type="checkbox"]:focus+label::before {
-    outline: rgb(255, 255, 255) auto 5px;
+.faq {
+	.container > .row {
+		justify-content: space-between;
+		align-items: center;
+	}
+	.faq-info {
+		.col-sm-12 {
+			margin: 25px 0;
+		}
+	}
+	.faq-image {
+		background-image: url('../../assets/products/gv/faq-image.jpg');
+		min-height: 450px;
+		position: relative;
+		border-radius: 5px;
+		.round {
+			position: absolute;
+			left: -37.5px;
+			top:50%;
+			background-size: 65%;
+			margin-top: -37.5px;
+			background-color: $white;
+			background-image: url('../../assets/products/gv/faq.png');
+		}
+	}
 }
